@@ -375,10 +375,10 @@
 		<org.sonarsource.java-sonar-jacoco-listeners.version>3.8</org.sonarsource.java-sonar-jacoco-listeners.version>
 
 		<!-- Docker images -->
-		<mySQLDocker.registry>
-			672812193635.dkr.ecr.us-east-1.amazonaws.com/mysql:essi-0.1.3-configured</mySQLDocker.registry>
-
+		<mySQLDocker.registry>mysql:9.5.0</mySQLDocker.registry>
 		<docker.elasticsearch>opensearchproject/opensearch:1.3.5</docker.elasticsearch>
+        <docker.keycloak>keycloak/keycloak:26.4.1</docker.keycloak>
+        <docker.redis>redis:8.2.2</docker.redis>
 
         <surefire.arglineopen>
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
@@ -387,6 +387,7 @@
             --add-opens=java.base/java.util=ALL-UNNAMED
             --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
             --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+            --add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp.datatype=ALL-UNNAMED
         </surefire.arglineopen>
 	</properties>
 
@@ -400,7 +401,7 @@
 			    <artifactId>rdf4j-repository-sparql</artifactId>
 			    <version>${rdf4j.version}</version> <!-- or latest 4.x -->
 			  </dependency>
-			
+
 			  <dependency>
 			    <groupId>org.eclipse.rdf4j</groupId>
 			    <artifactId>rdf4j-repository-api</artifactId>
@@ -1593,12 +1594,14 @@
 						</executions>
 						<configuration>
 							<systemPropertyVariables>
-								<mysql.host>
-									jdbc:mysql://${docker.host.address}:${mysql.port}</mysql.host>
-								<es.host>
-									http://${docker.host.address}:${gi-elasticsearch.port}</es.host>
+								<mysql.host>jdbc:mysql://${docker.host.address}:${mysql.port}</mysql.host>
+								<es.host>http://${docker.host.address}:${gi-elasticsearch.port}</es.host>
+                                <keycloak.host>http://${docker.host.address}:${keycloak.port}</keycloak.host>
+                                <redis.host>http://${docker.host.address}:${redis.port}</redis.host>
 								<es.user>admin</es.user>
 								<es.password>admin</es.password>
+                                <keycloak.user>admin</keycloak.user>
+                                <keycloak.password>admin</keycloak.password>
 								<docker.username>${docker.username}</docker.username>
 								<docker.password>${docker.password}</docker.password>
 								<giProxyEndpoint>${giProxyEndpoint}</giProxyEndpoint>
